# deep-swe-bench

./: .gitignore  AGENTS.md  CONTEXT.md  EXECUTION-PLAN.md  README.md  RENAME-PLAN.md  data.txt  event.json  pi-jsonl-delete-manifest.txt  pyproject.toml  tmp_task20_29_summary.json
.codegraph/: changes.journal  graph.db
analysis/: 12v0-complete-comparison.json  12v0-current-comparison.json  12v0-rep-aggregated-comparison.json  12v0-rep-token-comparison.json  cursor-baseline-12v0-r3-manual-interventions.md  openai-codex-gpt54-off-none-controlled-probe.jsonl  openai-codex-gpt54-off-none-controlled-probe.mjs  openai-codex-gpt55-off-none-body-example.json  openai-codex-gpt55-off-none-controlled-probe.jsonl  openai-codex-gpt55-off-none-controlled-probe.mjs  openai-codex-thinking-live-probe.jsonl  openai-codex-thinking-live-probe.mjs  openai-codex-thinking-request-probe.jsonl  openai-codex-thinking-request-probe.mjs  pi-zai-51-5v-request-shape-probe.jsonl  pi-zai-request-shape-probe.jsonl  pi_zai_51_5v_request_shape_probe.mjs  pi_zai_request_shape_probe.mjs  zai-glm51-5v-probe.jsonl  zai-glm52-reasoning-probe-coding-endpoint.jsonl  zai-glm52-reasoning-probe.jsonl  zai-glm52-reasoning-repeat-probe.jsonl  zai-glm52-streaming-probe.jsonl  zai_glm51_5v_probe.py  zai_glm52_reasoning_probe.py  zai_glm52_reasoning_repeat_probe.py
arms/: README.md
configs/: README.md
docs/: cursor-composer-thinking.md  openai-codex-thinking.md  zai-glm51-thinking.md  zai-glm52-thinking.md  zai-glm5v-turbo.md
harness/: Dockerfile.pi-agent  analyze.py  lib.py  parse_usage.py  run.py  (+2 more)
(+215 files in other folders)
