[project]
name = "deep-swe-bench"
version = "0.1.0"
description = "Hold the model constant, vary one harness thing (a skill, an extension, a prompt) on real DeepSWE SWE tasks; measure the delta in success and tokens."
requires-python = ">=3.11"
dependencies = ["scipy>=1.13", "numpy>=1.26"]

[tool.uv]
package = false
